--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "melon-json-schema-validator",
   "version": "0.1.0",
-  "description": "melon json scehma validator",
+  "description": "melon json schema validator",
   "main": "src/main.js",
   "license": "MIT",
   "author": {
@@ -14,5 +14,9 @@
     "dep",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "melon": "~0.1.1",
+    "tv4": "~1.2.7"
+  }
 }
