--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "babel-core": "^6.2.1",
     "babel-plugin-external-helpers-2": "^6.1.18",
     "babel-plugin-syntax-object-rest-spread": "^6.1.18",
+    "babel-plugin-transform-es2015-modules-umd": "^6.6.5",
     "babel-plugin-transform-object-rest-spread": "^6.1.18",
     "babel-preset-es2015": "^6.1.18",
+    "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-react": "^6.1.18"
   }
 }
