--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "melon-json-schema-validator",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "melon json schema validator",
   "main": "src/main.js",
   "license": "MIT",
@@ -17,6 +17,6 @@
   ],
   "dependencies": {
     "melon": "~0.2",
-    "ajv": "^4.0.0"
+    "ajv.bundle": "https://cdnjs.cloudflare.com/ajax/libs/ajv/4.0.6/ajv.bundle.js"
   }
 }
