--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "melon-json-schema-validator",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "melon json schema validator",
   "main": "src/main.js",
   "scripts": {
@@ -21,7 +21,7 @@
     "dependencies": {}
   },
   "peerDependencies": {
-    "melon": "0.2.x"
+    "melon-core": "0.3.x"
   },
   "license": "MIT",
   "directories": {
@@ -40,6 +40,6 @@
   },
   "dependencies": {
     "ajv": "^4.3.0",
-    "melon": "^0.2.5"
+    "melon-core": "^0.3.2"
   }
 }
