--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "melon-json-schema-validator",
   "version": "1.0.1",
   "description": "melon json schema validator",
-  "main": "src/main.js",
+  "main": "lib/main.js",
   "scripts": {
+    "build": "gulp build",
     "lint": "fecs src",
-    "build:amd": "sh tool/build-amd.sh"
+    "rebuild": "gulp clean build",
+    "prepublish": "npm run lint && npm run rebuild",
+    "test": "NODE_ENV=test karma start ./test/karma.local.conf.js",
+    "test-ci": "NODE_ENV=test karma start ./test/karma.travis.conf.js",
+    "coveralls": "cat test/coverage/lcov/lcov.info | ./node_modules/.bin/coveralls",
+    "docs": "esdoc -c esdoc.json",
+    "setup": "rimraf asset && webpack --config=tools/webpack.dll.js"
   },
   "author": {
     "name": "ludafa",
@@ -25,13 +32,76 @@
     "test": "test"
   },
   "devDependencies": {
-    "babel-core": "^6.2.1",
-    "babel-plugin-external-helpers-2": "^6.1.18",
-    "babel-plugin-syntax-object-rest-spread": "^6.1.18",
-    "babel-plugin-transform-es2015-modules-umd": "^6.6.5",
-    "babel-plugin-transform-object-rest-spread": "^6.1.18",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-es2015-loose": "^7.0.0",
-    "babel-preset-react": "^6.1.18"
-  }
+    "babel-istanbul": "^0.11.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-external-helpers": "^6.8.0",
+    "babel-plugin-external-helpers-insert-require": "^1.0.0",
+    "babel-plugin-transform-es2015-modules-umd": "^6.12.0",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.8.0",
+    "babel-plugin-transform-es3-property-literals": "^6.8.0",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-2": "^6.13.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.0",
+    "browserify-istanbul": "^2.0.0",
+    "coveralls": "^2.11.12",
+    "esdoc": "^0.4.8",
+    "esdoc-es7-plugin": "0.0.3",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "fecs": "^0.8.6",
+    "file-loader": "^0.9.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-babel-external-helpers": "^2.0.2",
+    "gulp-clean": "^0.3.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "html-webpack-harddisk-plugin": "0.0.2",
+    "html-webpack-plugin": "^2.22.0",
+    "jasmine": "^2.4.1",
+    "json-loader": "^0.5.4",
+    "karma": "^1.2.0",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-browserify": "^5.1.0",
+    "karma-browserstack-launcher": "^1.1.1",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "rimraf": "^2.5.4",
+    "watchify": "^3.7.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.8.3",
+    "webpack-hot-middleware": "^2.12.2"
+  },
+  "dependencies": {
+    "ajv": "^4.7.7",
+    "melon-core": "^0.3.4"
+},
+"babel": {
+  "presets": [
+    "es2015",
+    "stage-2",
+    "react"
+  ]
+},
+"babelBuild": {
+  "presets": [
+    [
+      "es2015",
+      {
+        "loose": true,
+        "modules": "umd"
+      }
+    ],
+    "stage-2"
+  ],
+  "plugins": [
+    "external-helpers",
+    "external-helpers-insert-require",
+    "transform-es3-property-literals",
+    "transform-es3-member-expression-literals"
+  ]
+}
 }
