--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "melon-json-schema-validator",
   "version": "1.0.4",
   "description": "melon json schema validator",
-  "main": "lib/main.js",
+  "main": "lib/index.js",
   "license": "MIT",
   "author": {
     "name": "ludafa",
