在发布包中忽略源码

--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "node_modules",
     "dep",
     "test",
-    "tests"
+    "tests",
+    "src"
   ],
   "dependencies": {
     "melon": "~0.2",
